Diseable Github CI for now

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,9 @@ name: CI
 
 on:
   push:
-    branches: [ snakemake, hubmap ]
+    branches: [  ]
   pull_request:
-    branches: [ snakemake, hubmap ]
+    branches: [  ]
 
 jobs:
   build:
