--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     strategy:
       matrix:
         python-version: [3.8]
@@ -26,6 +26,39 @@ jobs:
         channels: conda-forge,bioconda,defaults
         channel-priority: true
         activate-environment: anaconda-client-env
+
+    - name: Set up Go 1.12
+      uses: actions/setup-go@v1
+      with:
+        go-version: 1.12
+      id: go
+
+    - name: Install Dependencies
+      run: |
+        sudo apt-get update && sudo apt-get install -y \
+          build-essential \
+          libssl-dev \
+          uuid-dev \
+          libgpgme11-dev \
+          squashfs-tools \
+          libseccomp-dev \
+          pkg-config
+    - name: Install Singularity
+      env:
+        SINGULARITY_VERSION: 3.2.1
+        GOPATH: /tmp/go
+      run: |
+        mkdir -p $GOPATH
+        sudo mkdir -p /usr/local/var/singularity/mnt && \
+        mkdir -p $GOPATH/src/github.com/sylabs && \
+        cd $GOPATH/src/github.com/sylabs && \
+        wget -qO- https://github.com/sylabs/singularity/releases/download/v${SINGULARITY_VERSION}/singularity-${SINGULARITY_VERSION}.tar.gz | \
+        tar xzv && \
+        cd singularity && \
+        ./mconfig -p /usr/local && \
+        make -C builddir && \
+        sudo make -C builddir install
+
     - shell: bash -l {0}
       run: |
         conda info
@@ -36,10 +69,6 @@ jobs:
     - name: Install Snakemake
       shell: bash -l {0}
       run: mamba install -q bioconda::snakemake=5.19
-    - uses: eWaterCycle/setup-singularity@v5
-      name: Install Singularity
-      with:
-        singularity-version: 3.6.4
     - name: Checkout submodules
       run: git submodule update --init --recursive
     - name: Run the full workflow
