Add branches to test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,9 @@ name: CI
 
 on:
   push:
-    branches: [  ]
+    branches: [ main, development ]
   pull_request:
-    branches: [  ]
+    branches: [ main, development ]
 
 jobs:
   build:
