--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,18 +8,8 @@ on:
     branches_ignore: []
 
 jobs:
-  formatting:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-
-      - name: Setup black environment
-        run: |
-          conda create -c conda-forge -y -q --name black black
-
   testing:
     runs-on: ubuntu-latest
-    needs: formatting
     steps:
       - uses: actions/checkout@v1
 
@@ -28,7 +18,7 @@ jobs:
         run: |
           export PATH="/usr/share/miniconda/bin:$PATH"
           conda install -q --name base conda-forge::mamba
-          mamba install -c conda-forge -q bioconda::snakemake
+          mamba install -c conda-forge -n snakemake -q bioconda::snakemake
 
       - name: Setup apt dependencies
         run: |
