--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,36 +18,8 @@ jobs:
         run: |
           export PATH="/usr/share/miniconda/bin:$PATH"
           conda install -q --name base conda-forge::mamba
-          mamba install -c conda-forge -n snakemake -q bioconda::snakemake
+          mamba create -q --name snakemake -c conda-forge bioconda::snakemake singularity
 
-      - name: Setup apt dependencies
-        run: |
-          sudo apt install -y stress \
-            build-essential \
-            libssl-dev \
-            uuid-dev \
-            libgpgme11-dev \
-            squashfs-tools \
-            libseccomp-dev \
-            wget \
-            pkg-config \
-            git \
-            cryptsetup
-
-      - name: Setup Golang
-        uses: actions/setup-go@v2
-        with:
-          go-version: '1.13'
-
-      - name: Setup singularity
-        run: |
-          export VERSION=3.6.2
-          wget https://github.com/sylabs/singularity/releases/download/v${VERSION}/singularity-${VERSION}.tar.gz
-          tar -xzf singularity-${VERSION}.tar.gz
-          cd singularity
-          ./mconfig
-          make -C builddir
-          sudo make -C builddir install
 
       - name: Checkout submodules
         run: git submodule update --init --recursive
